objects/Partner_Community_HTML__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Bindings__c</fullName>
        <label>Field Bindings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTML__c</fullName>
        <label>HTML</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner Community HTML</label>
    <nameField>
        <label>Partner Community HTML Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Community HTML</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>